<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:paddingBottom="10dp">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivMovieCover"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:contentDescription="@string/movie_image"
        android:padding="5dp"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tvMovieTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:contentDescription="@string/movie_title"
        android:paddingBottom="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="15dp"
        android:text="@string/movie_title"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMovieCover" />


    <TextView
        android:id="@+id/tvMovieAveVoteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:contentDescription="@string/movie_rating_label"
        android:text="@string/movie_rating_label"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/tvMovieTitle"
        app:layout_constraintRight_toLeftOf="@+id/tvMovieAveVote"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />

    <TextView
        android:id="@+id/tvMovieAveVote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:contentDescription="@string/movie_rating"
        android:text="@string/movie_rating"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintLeft_toRightOf="@+id/tvMovieAveVoteLabel"
        app:layout_constraintRight_toLeftOf="@+id/tvMovieReleaseDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />

    <TextView
        android:id="@+id/tvMovieReleaseDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:contentDescription="@string/movie_release_date_label"
        android:paddingEnd="5dp"
        android:paddingStart="15dp"
        android:text="@string/movie_release_date_label"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/tvMovieAveVote"
        app:layout_constraintRight_toLeftOf="@+id/tvMovieReleaseDate"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />

    <TextView
        android:id="@+id/tvMovieReleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:contentDescription="@string/movie_release_date"
        android:text="@string/movie_release_date"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintLeft_toRightOf="@+id/tvMovieReleaseDateLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />

    <LinearLayout
        android:id="@+id/llDivider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieAveVoteLabel" />

    <TextView
        android:id="@+id/tvMovieOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:contentDescription="@string/movie_release_date"
        android:padding="15dp"
        android:text="@string/movie_overview"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llDivider" />

    <ProgressBar
        android:id="@+id/mdProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="visible" />

</android.support.constraint.ConstraintLayout>